tests/data/pl0/valid/feature_const_var_assignment.pl0
const x = 10;
var y;
begin
y := x + 1;
end.
