tests/data/pl0/invalid/limit_amax_exceeded.pl0
const x = 2048;
begin
  ! x
end.
